--- a/.github/workflows/slsa-go-releaser.yml
+++ b/.github/workflows/slsa-go-releaser.yml
@@ -44,6 +44,6 @@ jobs:
     needs: args
     uses: slsa-framework/slsa-github-generator/.github/workflows/builder_go_slsa3.yml@v1.9.0
     with:
-      go-version-file: go.mod
+      go-version-file: src/go.mod
       evaluated-envs: "COMMIT_DATE:${{needs.args.outputs.commit-date}}, COMMIT:${{needs.args.outputs.commit}}, VERSION:${{needs.args.outputs.version}}, TREE_STATE:${{needs.args.outputs.tree-state}}"
       config-file: .slsa-goreleaser/${{matrix.os}}-${{matrix.arch}}.yml
