--- a/.slsa-goreleaser/windows-amd64.yml
+++ b/.slsa-goreleaser/windows-amd64.yml
@@ -12,7 +12,7 @@ goarch: amd64
 
 main: ./src/main.go
 
-binary: rig-{{ .OS }}-{{ .Arch }}.exe
+binary: rig-{{ .Os }}-{{ .Arch }}.exe
 
 ldflags:
   - "-X main.Version={{ .Env.VERSION }}"
